--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
     <!-- Additional required wrapper -->
     <div class="swiper-wrapper">
         <!-- Slides -->
-        <div class="swiper-slide">Slide 1</div>
-        <div class="swiper-slide">Slide 2</div>
-        <div class="swiper-slide">Slide 3</div>
+        <div class="swiper-slide">
+        	<img src="img/20aw1.jpg">
+        </div>
+        <div class="swiper-slide">
+        	<img src="img/20aw2.jpg">
+        </div>
+        <div class="swiper-slide">
+        	<img src="img/20aw3.jpg">
+        </div>
         ...
     </div>
     <!-- If we need pagination -->
